<resources>
    <string name="app_name">创艺云坊</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Lonely</string>
    <string name="slide_2_title">Meet</string>
    <string name="slide_3_title">Fall in love at first sight</string>
    <string name="slide_4_title">Both fall in love</string>
    <string name="slide_5_title">Together forever</string>

    <string name="play_again">play again</string>
    <string name="category_menu1">油纸伞</string>
    <string name="category_menu2">金丝彩砂</string>
    <string name="category_menu3">留青竹刻</string>
    <string name="category_menu4">石刻</string>
    <string name="category_menu5">剪纸</string>
    <string name="category_menu6">民歌</string>
    <string name="category_menu7">民舞</string>
    <string name="category_btn_channel">油纸伞频道</string>
    <string name="category_btn_new_product">最新匠作</string>
    <string name="category_tv_color">色系</string>
    <string name="category_color_tv1">白梅花</string>
    <string name="category_color_tv2">十里桃花</string>
    <string name="category_color_tv3">双鸟戏梅</string>
    <string name="category_color_tv4">山水梅花</string>
    <string name="category_color_tv5">荷花</string>
    <string name="category_color_tv6">蝴蝶</string>
    <string name="category_color_tv7">三生三世</string>
    <string name="category_color_tv8">牡丹</string>
    <string name="category_color_tv9">白玉兰</string>
    <string name="category_color_tv10">桃李芬芳</string>
    <string name="category_color_tv11">花好月圆</string>
    <string name="category_color_tv12">青花瓷</string>
    <string name="category_color_tv13">水墨竹</string>
    <string name="category_color_tv14">花鸟</string>
    <string name="category_color_tv15">喜上眉俏</string>
    <string name="category_color_tv16">樱花恋</string>
    <string name="category_tv_size">大小</string>
    <string name="category_size_btn1">84cm</string>
    <string name="category_size_btn2">100cm</string>
    <string name="category_size_btn3">120cm</string>
    <string name="category_tv_product">穿线工艺</string>
    <string name="category_product_btn1">满穿</string>
    <string name="category_product_btn2">满穿加砂</string>
    <string name="category_product_btn3">半穿</string>
    <string name="text_1">热门栏目</string>
    <string name="text_2">为你优选</string>
    <string name="grid_text_1">伞艺匠作</string>
    <string name="grid_text_2">品香生活</string>
    <string name="grid_text_3">英雄之梦</string>
    <string name="grid_text_4">丝竹蜀音</string>
    <string name="grid_text_5">沉香文化</string>
    <string name="grid_text_6">穿线艺术</string>
    <string name="grid_text_7">创意设计</string>
    <string name="grid_text_8">小件油伞</string>
    <string name="grid_text_9">风水挂件</string>
    <string name="grid_text_10">清风徐来</string>
    <string name="grid_text_11">香道文化</string>
    <string name="grid_text_12">气味相投</string>
    <string name="grid_text_13">香道文化</string>
    <string name="grid_text_14">气味相投</string>
    <string name="shiji">市集</string>
    <string name="zongc">众筹</string>
    <string name="zhimp">直播</string>
    <string name="tiyan">体验区</string>
    <string name="ling">0元购</string>
    <string name="lingpao">0元拍</string>
    <string name="jiaoxue">教学视频</string>
    <string name="huod">活动</string>
    <string name="jiaru">会员</string>
    <string name="input_phonenum">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="yousan_name">【定制】毕六福油纸伞实用防雨防晒中国风古典江南传统吊顶装饰道具舞蹈伞</string>
    <string name="price_msg">￥42.5-176.8</string>
    <string name="price">价格￥80-208</string>
    <string name="xiao_number">月销1269笔</string>
    <string name="express">快递：免运费</string>
    <string name="address">四川泸州</string>
    <string name="service">服务</string>
    <string name="service_msg">15天退货·10天内发货</string>
    <string name="spec">规格</string>
    <string name="srec_msg">规则 规格，颜色分类</string>
    <string name="evaluate_date">2018年5月17日</string>
    <string name="evaluate_msg">嗯，小时候闻过的味道，现在才知道原来是桐油，凉了风吹了几天味道好多了，超喜欢的伞啊！</string>
    <string name="evaluate_classify">颜色分类:白梅花 规格:84cm满穿</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="myShop">我的购物车</string>
    <string name="updateShopNum">修改商品数量</string>
    <string name="updateAddress">修改地址</string>
    <string name="numberSub">-</string>
    <string name="numberAdd">+</string>
    <string name="shopTotalPrice">商品总价(免运费)</string>
    <string name="checkOut">结算</string>
    <string name="delete">删除</string>
    <string name="collection">收藏</string>
    <string name="user_checkupdate_result">已经是最新版本</string>
    <string name="user_checkupdate_txt">检查更新</string>
    <string name="user_preferential_txt">我的优惠券</string>
    <string name="sure">确   定</string>
    <string name="sureOrder">确认订单</string>
    <string name="leaveMeassge">给卖家留言</string>
    <string name="user_suggest_txt">联系我们</string>
    <string name="user_aboutus_txt">关于我们</string>
    <string name="my_info">我的资料</string>
    <string name="my_tour">我的足迹</string>
    <string name="user_logout_txt">安全退出</string>
    <string name="usermanage_title">我的</string>
</resources>
